Added set project and set topic sections to BBS_BBG_poc notebook (#79)
* Added set project and set topic sections to BBS_BBG_poc notebook

* Fixed fetch env variable

* Added new line

* Added nexusforge to install_requires in setup.py

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "source": [
     "# Set a Project\n",
-    "The User choses/creates a project to host a KG."
+    "The user chooses / creates a project to host a KG."
    ]
   },
   {
@@ -39,14 +39,39 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Use the Nexus Web application to get a token. Once a token is obtained, paste it below.\n",
+    "import getpass\n",
+    "TOKEN = getpass.getpass()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from kgforge.core import KnowledgeGraphForge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Configure a 'forge' to manage (create, access and deploy) the knowledge graph within a given Blue Brain Nexus Project.\n",
+    "FORGE_CONFIG_FILE = os.getenv(\"FORGE_CONFIG_FILE\") \n",
+    "assert (FORGE_CONFIG_FILE is not None) \n",
+    "forge = KnowledgeGraphForge(FORGE_CONFIG_FILE,token=TOKEN)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Set topic\n",
-    "The user defines its topic."
+    "The user defines a topic."
    ]
   },
   {
@@ -54,7 +79,82 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "topic_resource=None\n",
+    "topics = dict({'COVID-19': {\n",
+    "    'description': '',\n",
+    "    'tags': '',\n",
+    "    'questions': ['', '', '', '']}})\n",
+    "def save_topic(b):\n",
+    "    topics[widget.children[2].value] = {\n",
+    "        'description': widget.children[3].value,\n",
+    "        'tags': widget.children[4].value,\n",
+    "        'questions':  [widget.children[i].value for i in range(6,10)]}\n",
+    "    topic_to_save = {\n",
+    "        #\"@context\":\"https://bbp.epfl.ch/nexus/v1/resources/covid19-kg/schemas/context\",\n",
+    "        \"id\":str(widget.children[2].value).replace(' ', '_'),\n",
+    "        \"type\":\"Topic\",\n",
+    "        \"name\":widget.children[2].value,\n",
+    "        'description': widget.children[3].value,\n",
+    "        'keywords': widget.children[4].value,\n",
+    "        'question':  [widget.children[i].value for i in range(6,10)]\n",
+    "    }\n",
+    "    #print(topic_resource)\n",
+    "    global topic_resource\n",
+    "    topic_resource = forge.from_json(topic_to_save)\n",
+    "    forge.register(topic_resource)\n",
+    "    w0.options=list(topics.keys())\n",
+    "def topics_change(change):\n",
+    "    change['new']\n",
+    "    w1.value=change['new']\n",
+    "    w2.value=topics[w1.value]['description']\n",
+    "    w3.value=topics[w1.value]['tags']\n",
+    "    w4.value=topics[w1.value]['questions'][0]\n",
+    "    w5.value=topics[w1.value]['questions'][1]\n",
+    "    w6.value=topics[w1.value]['questions'][2]\n",
+    "    w7.value=topics[w1.value]['questions'][3]\n",
+    "w0 = ipywidgets.Dropdown(\n",
+    "    options=list(topics.keys()),\n",
+    "    description='Topics:',\n",
+    "    disabled=False)\n",
+    "w1 = ipywidgets.Text(\n",
+    "    placeholder='COVID-19',\n",
+    "    description='Name:',\n",
+    "    disabled=False)\n",
+    "w2 = ipywidgets.Textarea(\n",
+    "    placeholder='Add a description of your topic',\n",
+    "    description='Description:',\n",
+    "    disabled=False)\n",
+    "w3 = ipywidgets.Textarea(\n",
+    "    placeholder='Coronavirus; COVID-19; SARS; risk factor; glycosylation; sugar; carbohydrates',\n",
+    "    description='Tags:',\n",
+    "    disabled=False)\n",
+    "w4 = ipywidgets.Text(\n",
+    "    placeholder='Add a question about your research topic',\n",
+    "    disabled=False)\n",
+    "w5 = ipywidgets.Text(\n",
+    "    placeholder='Add a question about your research topic',\n",
+    "    disabled=False)\n",
+    "w6 = ipywidgets.Text(\n",
+    "    placeholder='Add a question about your research topic',\n",
+    "    disabled=False)\n",
+    "w7 = ipywidgets.Text(\n",
+    "    placeholder='Add a question about your research topic',\n",
+    "    disabled=False)\n",
+    "w8 = ipywidgets.Button(\n",
+    "    description='Add',\n",
+    "    button_style='',\n",
+    "    tooltip='Add topic',\n",
+    "    disabled=False)\n",
+    "widget = ipywidgets.VBox([w0, ipywidgets.HTML('<b>Add a new topic to the topics list:</b>'), w1, w2, w3, ipywidgets.Label('Please express your research topic in a few questions:'), \n",
+    "                          w4, w5, w6, w7, w8], layout=ipywidgets.Layout(\n",
+    "    display='flex',\n",
+    "    align_items='flex-end',\n",
+    "    width='40%'))\n",
+    "w8.on_click(save_topic)\n",
+    "w0.observe(topics_change, names='value')\n",
+    "display(widget)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1200,7 +1300,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   },
   "toc-autonumbering": true
  },
