Re-added ipywidgets in imports

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -20,6 +20,7 @@
     "import pandas as pd\n",
     "import requests\n",
     "import sqlalchemy\n",
+    "import ipywidgets\n",
     "\n",
     "import bbsearch as bbs\n",
     "from bbsearch.remote_searcher import RemoteSearcher\n",
