--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -231,8 +231,7 @@
     "    searcher=searcher,\n",
     "    connection=engine,\n",
     "    article_saver=article_saver,\n",
-    "    results_per_page=3,\n",
-    "    top_n_max=100)\n",
+    "    results_per_page=3)\n",
     "search_widget"
    ]
   },
