Change POC notebook

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -14,6 +14,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import getpass\n",
     "import os\n",
     "import pathlib\n",
     "\n",
@@ -101,11 +102,6 @@
    "source": [
     "BBS_DATA_PATH = os.getenv(\"BBS_DATA_PATH\", \"/raid/bbs_data/\")\n",
     "BBS_DATA_PATH = pathlib.Path(BBS_DATA_PATH)\n",
-    "\n",
-    "CORD19_VERSION = 'v7'\n",
-    "\n",
-    "cord_path = BBS_DATA_PATH / f'cord19_{CORD19_VERSION}'\n",
-    "db_path = cord_path / 'databases' / 'cord19.db'\n",
     "trained_models_path = BBS_DATA_PATH / 'trained_models'"
    ]
   },
@@ -116,7 +112,8 @@
    "outputs": [],
    "source": [
     "searcher = RemoteSearcher(SEARCH_ENGINE_URL)\n",
-    "engine = sqlalchemy.create_engine(f\"sqlite:///{db_path}\")\n",
+    "password = getpass.getpass('Password to database:')\n",
+    "engine = sqlalchemy.create_engine(f'mysql+pymysql://guest:{password}@dgx1.bbp.epfl.ch:8853/cord19_v35')\n",
     "article_saver = ArticleSaver(connection=engine)"
    ]
   },
@@ -1186,9 +1183,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:kgforge_is_awesome]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "kgforge_is_awesome"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1200,7 +1197,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.5"
   },
   "toc-autonumbering": true
  },
