Improve widgets appearance + Add css stylesheet

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -330,15 +330,7 @@
     "mining_widget = MiningWidget(\n",
     "    mining_server_url=TEXT_MINING_URL,\n",
     "    article_saver=article_saver,\n",
-    "    default_text=DEFAULT_TEXT)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    default_text=DEFAULT_TEXT)\n",
     "mining_widget"
    ]
   },
@@ -1286,9 +1278,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:kgforge_is_awesome]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "kgforge_is_awesome"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1300,7 +1292,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   },
   "toc-autonumbering": true
  },
