Add SchemaRequest class as a wrapper pointer to schema_request dataframe

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "import bbsearch as bbs\n",
     "from bbsearch.remote_searcher import RemoteSearcher\n",
-    "from bbsearch.widgets import ArticleSaver, SearchWidget, MiningWidget"
+    "from bbsearch.widgets import ArticleSaver, SearchWidget, MiningWidget, SchemaRequest"
    ]
   },
   {
@@ -165,6 +165,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "schema_request = SchemaRequest()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "columns = ['entity_type', 'property', 'property_type', 'property_value_type', 'ontology_source']\n",
     "\n",
     "etypes_sources = [('CELL_TYPE', None), \n",
@@ -176,11 +185,11 @@
     "                  ('PATHWAY', 'Reactome'),\n",
     "                  ('PROTEIN', 'NCIT')\n",
     "                 ]\n",
-    "schema_request = [{'entity_type': etype, 'ontology_source': source} \n",
-    "                 for etype, source in etypes_sources]\n",
+    "schema_request_data = [{'entity_type': etype, 'ontology_source': source} \n",
+    "                       for etype, source in etypes_sources]\n",
     "\n",
-    "schema_request = pd.DataFrame(schema_request, columns=columns)\n",
-    "display(schema_request)"
+    "schema_request.schema = pd.DataFrame(schema_request_data, columns=columns)\n",
+    "display(schema_request.schema)"
    ]
   },
   {
