Drop duplicates from extractions

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -381,7 +381,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "table_extractions = mining_widget.get_extracted_table()"
+    "# Get DataFrame of extractions\n",
+    "table_extractions = mining_widget.get_extracted_table()\n",
+    "\n",
+    "# Drop duplicates in DataFrame\n",
+    "columns_duplicates = table_extractions.columns.tolist()\n",
+    "columns_duplicates.remove('entity_type')\n",
+    "table_extractions = table_extractions.drop_duplicates(subset=columns_duplicates, keep='first', ignore_index=True)"
    ]
   },
   {
@@ -1311,9 +1317,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:kgforge_is_awesome]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "kgforge_is_awesome"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1325,7 +1331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   },
   "toc-autonumbering": true
  },
