Real MYSQL_URI from env variable

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -212,9 +212,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "MYSQL_DB_URI = os.getenv(\"MYSQL_DB_URI\", \"dgx1.bbp.epfl.ch:8853\")\n",
     "searcher = RemoteSearcher(SEARCH_ENGINE_URL)\n",
-    "password = getpass.getpass('Password to database:')\n",
-    "engine = sqlalchemy.create_engine(f'mysql+pymysql://guest:{password}@dgx1.bbp.epfl.ch:8853/cord19_v35')\n",
+    "engine = sqlalchemy.create_engine(f'mysql+pymysql://guest:guest@{MYSQL_DB_URI}/cord19_v35')\n",
     "article_saver = ArticleSaver(connection=engine)"
    ]
   },
