--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -1283,9 +1283,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:kgforge_is_awesome]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "kgforge_is_awesome"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1297,7 +1297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.4"
   },
   "toc-autonumbering": true
  },
