DB Refactoring and Update to CORD-19 v35 (#75)
Co-authored-by: Emilie Delattre <emilie.delattre@epfl.ch>
Co-authored-by: Jan Krepl <jankrepl@yahoo.com>
Co-authored-by: Stanislav Schmidt <stanislav.schmidt@epfl.ch>

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -14,6 +14,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import getpass\n",
     "import os\n",
     "import pathlib\n",
     "\n",
@@ -202,11 +203,6 @@
    "source": [
     "BBS_DATA_PATH = os.getenv(\"BBS_DATA_PATH\", \"/raid/bbs_data/\")\n",
     "BBS_DATA_PATH = pathlib.Path(BBS_DATA_PATH)\n",
-    "\n",
-    "CORD19_VERSION = 'v7'\n",
-    "\n",
-    "cord_path = BBS_DATA_PATH / f'cord19_{CORD19_VERSION}'\n",
-    "db_path = cord_path / 'databases' / 'cord19.db'\n",
     "trained_models_path = BBS_DATA_PATH / 'trained_models'"
    ]
   },
@@ -216,8 +212,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "MYSQL_DB_URI = os.getenv(\"MYSQL_DB_URI\", \"dgx1.bbp.epfl.ch:8853\")\n",
     "searcher = RemoteSearcher(SEARCH_ENGINE_URL)\n",
-    "engine = sqlalchemy.create_engine(f\"sqlite:///{db_path}\")\n",
+    "engine = sqlalchemy.create_engine(f'mysql+pymysql://guest:guest@{MYSQL_DB_URI}/cord19_v35')\n",
     "article_saver = ArticleSaver(connection=engine)"
    ]
   },
@@ -1903,9 +1900,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:kgforge_is_awesome]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "kgforge_is_awesome"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
