Improve widgets appearance + Add css stylesheet (#93)
Co-authored-by: Stanislav Schmidt <stanislav.schmidt@epfl.ch>

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -327,15 +327,7 @@
     "mining_widget = MiningWidget(\n",
     "    mining_server_url=TEXT_MINING_URL,\n",
     "    article_saver=article_saver,\n",
-    "    default_text=DEFAULT_TEXT)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    default_text=DEFAULT_TEXT)\n",
     "mining_widget"
    ]
   },
