Added missing imports and env variables

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -366,6 +366,7 @@
     "import jupyter_server_proxy\n",
     "import jupyter_dash\n",
     "import dash\n",
+    "import dash_daq as daq\n",
     "from dash.dependencies import Input, Output, State\n",
     "import dash_core_components as dcc\n",
     "import dash_html_components as html\n",
@@ -666,6 +667,7 @@
     "from pygments.lexers import JsonLdLexer, TurtleLexer\n",
     "from pygments.formatters import TerminalFormatter, TerminalTrueColorFormatter\n",
     "import json\n",
+    "import uuid\n",
     "from tqdm.notebook import tqdm\n",
     "\n",
     "def pretty_print(a_json):\n",
@@ -835,7 +837,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "linker = EntityLinker.from_pretrained('shared-data/entity-linking/', bulk=False)"
+    "ONTOLOGY_LINKING_MODEL_PATH = os.getenv(\"ONTOLOGY_LINKING_MODEL_PATH\")\n",
+    "assert (ONTOLOGY_LINKING_MODEL_PATH is not None)\n",
+    "linker = EntityLinker.from_pretrained(ONTOLOGY_LINKING_MODEL_PATH, bulk=False)"
    ]
   },
   {
@@ -1329,7 +1333,7 @@
     "    html.Div(className='eight columns', children=[\n",
     "        cyto.Cytoscape(\n",
     "            id='cytoscape',\n",
-    "            elements=cyto_elements,\n",
+    "            elements=comention_graph_cyto_elements,\n",
     "            stylesheet=default_stylesheet,\n",
     "            style={\n",
     "                'height': '95vh',\n",
@@ -1906,7 +1910,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   },
   "toc-autonumbering": true
  },
