--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -201,7 +201,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "BBS_DATA_PATH = os.getenv(\"BBS_DATA_PATH\", \"/raid/bbs_data/\")\n",
+    "BBS_DATA_PATH = os.getenv(\"BBS_DATA_PATH\", \"/raid/sync/proj115/bbs_data/\")\n",
     "BBS_DATA_PATH = pathlib.Path(BBS_DATA_PATH)\n",
     "trained_models_path = BBS_DATA_PATH / 'trained_models'"
    ]
