Added operator import and fixed default reset values for entityfreqslider and dropdown-freq-filter dash components

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -403,7 +403,8 @@
     "import dash_html_components as html\n",
     "import dash_table\n",
     "from jupyter_dash import JupyterDash\n",
-    "import plotly.express as px"
+    "import plotly.express as px\n",
+    "import operator"
    ]
   },
   {
@@ -581,15 +582,20 @@
     "    } for i in selected_columns]\n",
     "\n",
     "\n",
-    "@app.callback([Output('entityfreqslider', 'value'),Output('dropdown-freq-filter', 'value')],[ Input('table-reset', 'n_clicks')])\n",
-    "def reset(reset):\n",
+    "@app.callback([Output('entityfreqslider', 'value'),Output('dropdown-freq-filter', 'value')],\n",
+    "              [ Input('table-reset', 'n_clicks')],\n",
+    "             [State('entityfreqslider', 'value'),\n",
+    "              State('dropdown-freq-filter', 'value')])\n",
+    "def reset(reset, entityfreq,freqoperator):\n",
     "    ctx = dash.callback_context\n",
     "    if not ctx.triggered:\n",
     "        button_id = 'No clicks yet'\n",
     "    else:\n",
     "        button_id = ctx.triggered[0]['prop_id'].split('.')[0]\n",
     "    if button_id == \"table-reset\":\n",
-    "        return [1,\"operator.ge\"]\n",
+    "        return 1,\"operator.ge\"\n",
+    "    else:\n",
+    "        return entityfreq, freqoperator\n",
     "        \n",
     "@app.callback([Output('memory', 'data'),\n",
     "               Output('datatable-upload-container', 'data'),\n",
