Included no topic option

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -97,7 +97,7 @@
    "source": [
     "topic_resource=None\n",
     "kg_resource=None\n",
-    "agent = jwt.decode(TOKEN,  verify=False)['preferred_username']\n",
+    "agent_username = jwt.decode(TOKEN,  verify=False)['preferred_username']\n",
     "\n",
     "def save_topic(b):\n",
     "    output.clear_output()\n",
@@ -144,23 +144,26 @@
     "            question ?question ;\n",
     "            <https://bluebrain.github.io/nexus/vocabulary/deprecated> false ;\n",
     "            <https://bluebrain.github.io/nexus/vocabulary/createdAt> ?createdAt ;\n",
-    "            <https://bluebrain.github.io/nexus/vocabulary/createdBy> <{forge._store.endpoint}/realms/bbp/users/{agent}> .\n",
+    "            <https://bluebrain.github.io/nexus/vocabulary/createdBy> <{forge._store.endpoint}/realms/bbp/users/{agent_username}> .\n",
     "    }}\n",
     "    \"\"\"\n",
     "    resources = forge.sparql(query, limit=100)\n",
-    "    global topics_df\n",
-    "    topics_df = forge.as_dataframe(resources)\n",
-    "    topics_df = topics_df[[\"name\", \"field\", \"description\", \"keywords\", \"question\", \"createdAt\", \"id\"]]\n",
-    "    output.clear_output()\n",
-    "    with output:\n",
-    "        topics_list = list(set(topics_df.name))\n",
-    "        topics_list.sort()\n",
-    "        w0.options = [\"\"] + topics_list\n",
-    "        w0.value = \"\"\n",
-    "        w0.placeholder = \"Select topic\"\n",
-    "        w0.observe(topics_change, names='value')\n",
-    "        display(w0)\n",
-    "        display(s12)\n",
+    "    if len(resources) >= 1:\n",
+    "        global topics_df\n",
+    "        topics_df = forge.as_dataframe(resources)\n",
+    "        output.clear_output()\n",
+    "        with output:\n",
+    "            topics_list = list(set(topics_df.name))\n",
+    "            topics_list.sort()\n",
+    "            w0.options = [\"\"] + topics_list\n",
+    "            w0.value = \"\"\n",
+    "            w0.placeholder = \"Select topic\"\n",
+    "            w0.observe(topics_change, names='value')\n",
+    "            display(w0)\n",
+    "            display(s12)\n",
+    "    else:\n",
+    "        with output:\n",
+    "            print(\"No topics found!\")\n",
     "\n",
     "def topics_change(change):\n",
     "    output3.clear_output()\n",
@@ -202,24 +205,25 @@
     "        \n",
     "def get_datasets(b):\n",
     "    output3.clear_output()\n",
-    "    topic_resource_id = forge.as_jsonld(topic_resource, form=\"expanded\")['@id']\n",
-    "    query = f\"\"\"\n",
-    "        SELECT ?id ?name ?description ?keywords ?field ?question ?createdAt\n",
-    "        WHERE {{\n",
-    "            ?id a Dataset ;\n",
-    "                name ?name ;\n",
-    "                about <{topic_resource_id}> ;\n",
-    "                <https://bluebrain.github.io/nexus/vocabulary/deprecated> false ;\n",
-    "                <https://bluebrain.github.io/nexus/vocabulary/createdAt> ?createdAt ;\n",
-    "                <https://bluebrain.github.io/nexus/vocabulary/createdBy> <{forge._store.endpoint}/realms/bbp/users/{agent}> .\n",
-    "        }}\n",
-    "        \"\"\"\n",
-    "    global kg_resources\n",
-    "    kg_resources = forge.sparql(query, limit=100, debug=True)\n",
-    "    with output3:\n",
-    "        display(s2)\n",
-    "        s2.options = [r.name for r in kg_resources]\n",
-    "        display(s3)\n",
+    "    if w0.value != \"\":\n",
+    "        topic_resource_id = forge.as_jsonld(topic_resource, form=\"expanded\")['@id']\n",
+    "        query = f\"\"\"\n",
+    "            SELECT ?id ?name ?description ?keywords ?field ?question ?createdAt\n",
+    "            WHERE {{\n",
+    "                ?id a Dataset ;\n",
+    "                    name ?name ;\n",
+    "                    about <{topic_resource_id}> ;\n",
+    "                    <https://bluebrain.github.io/nexus/vocabulary/deprecated> false ;\n",
+    "                    <https://bluebrain.github.io/nexus/vocabulary/createdAt> ?createdAt ;\n",
+    "                    <https://bluebrain.github.io/nexus/vocabulary/createdBy> <{forge._store.endpoint}/realms/bbp/users/{agent}> .\n",
+    "            }}\n",
+    "            \"\"\"\n",
+    "        global kg_resources\n",
+    "        kg_resources = forge.sparql(query, limit=100, debug=True)\n",
+    "        with output3:\n",
+    "            display(s2)\n",
+    "            s2.options = [r.name for r in kg_resources]\n",
+    "            display(s3)\n",
     "        \n",
     "def download_dataset(b):\n",
     "    resource_id = [r.id for r in kg_resources if r.name == s2.value][0]\n",
