--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,9 +42,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " ·······························································································································································································································································································································································································································································································································································································································································································································································································································································································································································································································································································································································································································································································································································································································································································································································································\n"
+     ]
+    }
+   ],
    "source": [
     "import getpass\n",
     "TOKEN = getpass.getpass()"
@@ -52,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,14 +69,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Configure a 'forge' to manage (create, access and deploy) the knowledge graph within a given Blue Brain Nexus Project.\n",
     "FORGE_CONFIG_FILE = os.getenv(\"FORGE_CONFIG_FILE\") \n",
     "assert (FORGE_CONFIG_FILE is not None) \n",
-    "forge = KnowledgeGraphForge(FORGE_CONFIG_FILE,token=TOKEN)"
+    "forge = KnowledgeGraphForge(FORGE_CONFIG_FILE,token=TOKEN, debug=True)"
    ]
   },
   {
@@ -81,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,9 +99,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8da0e462a85a43758ba6d1f97d7a9dc2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Tab(children=(VBox(children=(HBox(children=(Button(description='🔬 List all your topics', layout=Layout(height=…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "topic_resource=None\n",
     "kg_resource=None\n",
@@ -215,7 +238,7 @@
     "                    about <{topic_resource_id}> ;\n",
     "                    <https://bluebrain.github.io/nexus/vocabulary/deprecated> false ;\n",
     "                    <https://bluebrain.github.io/nexus/vocabulary/createdAt> ?createdAt ;\n",
-    "                    <https://bluebrain.github.io/nexus/vocabulary/createdBy> <{forge._store.endpoint}/realms/bbp/users/{agent}> .\n",
+    "                    <https://bluebrain.github.io/nexus/vocabulary/createdBy> <{forge._store.endpoint}/realms/bbp/users/{agent_username}> .\n",
     "            }}\n",
     "            \"\"\"\n",
     "        global kg_resources\n",
@@ -230,10 +253,17 @@
     "    global kg_resource\n",
     "    global table_extractions\n",
     "    kg_resource = forge.retrieve(resource_id)\n",
-    "    forge.download(kg_resource, \"distribution.contentUrl\", \"./tmp\")\n",
+    "    forge.download(kg_resource, \"distribution.contentUrl\", \".\", overwrite=True)\n",
     "    for r in kg_resource.distribution:\n",
     "        if \"curated\" in r.name:\n",
-    "            table_extractions = pd.read_csv(f\"./tmp/{r.name}\")\n",
+    "            table_extractions = pd.read_csv(f\"./{r.name}\")\n",
+    "            if table_extractions is not None:\n",
+    "                message = f\"Dataset '{r.name}' with {len(table_extractions)} entities ready to be reused. Its content has been assigned to the variable 'table_extractions'. Please continue with the interactive UI section to visualise this dataset.\"\n",
+    "            else:\n",
+    "                table_extractions = pd.DataFrame()\n",
+    "                message = \"No dataset has been downloaded\"\n",
+    "            with output3:\n",
+    "                print(message)\n",
     "\n",
     "s0 = ipywidgets.Button(\n",
     "    description= '🔬 List all your topics',\n",
@@ -336,6 +366,31 @@
     "s4.on_click(update_topic)\n",
     "\n",
     "display(widget)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 28802\n",
+      "-rw-r--r-- 1 akkaufma bbp    92120 Aug 24 14:46 BBS_BBG_poc.ipynb\n",
+      "-rw-r--r-- 1 akkaufma bbp    68580 Aug 24 14:47 curated_table_extractions.csv\n",
+      "-rw-r--r-- 1 akkaufma bbp     5049 Jul 28 09:49 demo_attribute_extraction.ipynb\n",
+      "-rw-r--r-- 1 akkaufma bbp     5073 Jul 28 09:49 demo_embedding_api.ipynb\n",
+      "-rw-r--r-- 1 akkaufma bbp 32650897 Aug 24 14:47 kg_20200811-161932.ttl\n",
+      "-rw-r--r-- 1 akkaufma bbp    12795 Jul 28 09:49 NER_Evaluation.ipynb\n",
+      "-rw-r--r-- 1 akkaufma bbp      590 Aug 24 14:47 table_extractions_20200720-225814.csv\n",
+      "drwxr-xr-x 3 akkaufma bbp     4096 Aug 23 19:12 tmp\n"
+     ]
+    }
+   ],
+   "source": [
+    "table"
    ]
   },
   {
@@ -561,16 +616,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The table has 1434 rows.\n"
+     ]
+    }
+   ],
    "source": [
     "print(f'The table has {table_extractions.shape[0]} rows.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,9 +684,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The table has 438 rows.\n",
+      "CPU times: user 48.8 ms, sys: 3.54 ms, total: 52.3 ms\n",
+      "Wall time: 47.8 ms\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "filtered_table_extractions = table_extractions.copy()\n",
@@ -655,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -905,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -925,9 +998,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "86967780cdcf4376b619e1d70fd1c343",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=438.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4e22999ab9aa43bc993c69c08948cc98",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=1.0, bar_style='info', max=1.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "438 annotations created.\n",
+      "CPU times: user 194 ms, sys: 7.7 ms, total: 202 ms\n",
+      "Wall time: 198 ms\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "from kgforge.core import Resource\n",
@@ -963,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1082,9 +1201,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO   EntityLinker   Links to 123958 concepts (385490 aliases).\n",
+      "CPU times: user 248 ms, sys: 122 ms, total: 370 ms\n",
+      "Wall time: 369 ms\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "ONTOLOGY_LINKING_MODEL_PATH = os.getenv(\"ONTOLOGY_LINKING_MODEL_PATH\")\n",
@@ -1094,9 +1223,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ac06d8627ae2455999d693506789ed37",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=1.0, bar_style='info', max=1.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "CPU times: user 1.01 s, sys: 164 ms, total: 1.18 s\n",
+      "Wall time: 674 ms\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "from typing import Iterable, Dict, Iterator\n",
@@ -1128,9 +1281,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dccd303079cf4c258aa6957fe6ba5adb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=1.0, bar_style='info', max=1.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "CPU times: user 23.3 ms, sys: 441 µs, total: 23.8 ms\n",
+      "Wall time: 22.3 ms\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "# Set filter on extracted entities\n",
@@ -1152,9 +1329,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3d1cf9d9bfcd42ef85cc7865cba9e6c5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=116.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The knowledge graph has 1409 triples.\n",
+      "CPU times: user 700 ms, sys: 12.7 ms, total: 713 ms\n",
+      "Wall time: 706 ms\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "# Build knowledge graph from enriched annotations\n",
@@ -1221,7 +1423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1232,9 +1434,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Building co-mention graph\n",
+      "Done ...\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Building co-mention graph\")\n",
     "reshaped_enriched_annotations = forge.reshape(filtered_enriched_annotations, keep=[\"body\",\"target.selector.exact\",\"target.source\"])\n",
@@ -1282,7 +1493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1418,7 +1629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2037,7 +2248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2046,24 +2257,24 @@
     "\n",
     "# Temporally save the knowledge graph locally\n",
     "kg_ttl = knowledge_graph.serialize(format=\"turtle\",auto_compact=True)\n",
-    "kg_ttl_filename = \"./tmp/kg_%s.ttl\" % (timestr)\n",
+    "kg_ttl_filename = \"./kg_%s.ttl\" % (timestr)\n",
     "with open(kg_ttl_filename, 'wb') as outfile:\n",
     "        outfile.write(kg_ttl)\n",
     "\n",
     "        \n",
     "# Temporally save the extracted entities csv file locally\n",
-    "table_extractions_filename = \"./tmp/table_extractions_%s.csv\" % (timestr)\n",
+    "table_extractions_filename = \"./table_extractions_%s.csv\" % (timestr)\n",
     "table_extractions.to_csv(table_extractions_filename)\n",
     "\n",
     "\n",
     "# Temporally save the curated list of extracted entities csv file locally\n",
-    "curated_table_extractions_filename = \"./tmp/curated_table_extractions_%s.csv\" % (timestr)\n",
+    "curated_table_extractions_filename = \"./curated_table_extractions_%s.csv\" % (timestr)\n",
     "curated_table_extractions.to_csv(curated_table_extractions_filename)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2077,7 +2288,7 @@
     "agent.id = agent.sub\n",
     "agent.type = \"Person\"\n",
     "\n",
-    "dataset = Dataset(forge,name=\"A dataset\", about=forge.as_jsonld(topic_resource,form=\"expanded\")['@id'])\n",
+    "dataset = Dataset(forge,name=\"A dataset\", about=topic_resource.id)\n",
     "dataset.add_distribution(kg_ttl_filename, content_type=\"application/x-turtle\")\n",
     "dataset.add_distribution(table_extractions_filename, content_type=\"application/csv\")\n",
     "dataset.add_distribution(curated_table_extractions_filename, content_type=\"application/csv\")\n",
@@ -2087,9 +2298,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b0b0384edf614379b76a23ab7f918cbe",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Text(value='', description='Name:', placeholder='Add a name for your dataset'), Textarea(value=…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "version = agent.preferred_username+\"_\"+timestr\n",
     "\n",
