Added 'no dataset' message

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -220,10 +220,14 @@
     "            \"\"\"\n",
     "        global kg_resources\n",
     "        kg_resources = forge.sparql(query, limit=100, debug=True)\n",
-    "        with output3:\n",
-    "            display(s2)\n",
-    "            s2.options = [r.name for r in kg_resources]\n",
-    "            display(s3)\n",
+    "        if len(kg_resources) >= 1:\n",
+    "            with output3:\n",
+    "                display(s2)\n",
+    "                s2.options = [r.name for r in kg_resources]\n",
+    "                display(s3)\n",
+    "        else:\n",
+    "            with output3:\n",
+    "                print(\"No datasets found!\")\n",
     "        \n",
     "def download_dataset(b):\n",
     "    resource_id = [r.id for r in kg_resources if r.name == s2.value][0]\n",
