--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -2428,7 +2428,7 @@
     "agent.id = agent.sub\n",
     "agent.type = \"Person\"\n",
     "\n",
-    "dataset = Dataset(forge,name=\"A dataset\", about=topic_resource.id)\n",
+    "dataset = Dataset(forge,name=\"A dataset\", about=topic_resource.name)\n",
     "dataset.add_distribution(kg_ttl_filename, content_type=\"application/x-turtle\")\n",
     "dataset.add_distribution(table_extractions_filename, content_type=\"application/csv\")\n",
     "dataset.add_distribution(curated_table_extractions_filename, content_type=\"application/csv\")\n",
@@ -2501,15 +2501,6 @@
     "save_widget = ipywidgets.VBox(children=[t1, t2, b1, output4, t3, b2, output5])\n",
     "\n",
     "display(save_widget)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "topic_resource"
    ]
   },
   {
