Add information about the database version

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -376,7 +376,8 @@
     "assert SEARCH_ENGINE_URL is not None\n",
     "\n",
     "response = requests.post(\"{}/help\".format(SEARCH_ENGINE_URL))\n",
-    "assert response.ok and response.json()['name'] == 'SearchServer', \"The server is not accessible\""
+    "assert response.ok and response.json()['name'] == 'SearchServer', \"The server is not accessible\"\n",
+    "print(f\"This server is using the database: {response.json()['database']}\")"
    ]
   },
   {
@@ -530,7 +531,8 @@
    "source": [
     "TEXT_MINING_URL = os.getenv(\"TEXT_MINING_URL\", \"http://dgx1.bbp.epfl.ch:8852\")\n",
     "response = requests.post(TEXT_MINING_URL + \"/help\")\n",
-    "assert response.ok and response.json()['name'] == 'MiningServer'"
+    "assert response.ok and response.json()['name'] == 'MiningServer'\n",
+    "print(f\"This server is using the database: {response.json()['database']}\")"
    ]
   },
   {
@@ -2513,9 +2515,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "BBS-BBG",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "devel"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2527,7 +2529,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.5"
   },
   "toc-autonumbering": true
  },
