Add cell_compartment and drug in schema request

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -464,10 +464,12 @@
    "source": [
     "columns = ['entity_type', 'property', 'property_type', 'property_value_type', 'ontology_source']\n",
     "\n",
-    "etypes_sources = [('CELL_TYPE', None), \n",
+    "etypes_sources = [('CELL_COMPARTMENT', None),\n",
+    "                  ('CELL_TYPE', None),\n",
     "                  ('CHEMICAL', 'NCIT'), \n",
     "                  ('CONDITION', None),\n",
     "                  ('DISEASE', 'NCIT'),\n",
+    "                  ('DRUG', None),\n",
     "                  ('ORGAN', 'NCIT'),\n",
     "                  ('ORGANISM', 'NCIT'),\n",
     "                  ('PATHWAY', 'Reactome'),\n",
@@ -2513,9 +2515,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "BBS-BBG",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "devel"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2527,7 +2529,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.5"
   },
   "toc-autonumbering": true
  },
