[BBS-161] Remove the remote/local searcher paradigm (#137)
Co-authored-by: Emilie Delattre <emilie.delattre@epfl.ch>

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -23,8 +23,6 @@
     "import sqlalchemy\n",
     "import ipywidgets\n",
     "\n",
-    "import bbsearch as bbs\n",
-    "from bbsearch.remote_searcher import RemoteSearcher\n",
     "from bbsearch.widgets import ArticleSaver, SearchWidget, MiningWidget, SchemaRequest"
    ]
   },
@@ -363,7 +361,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "URLs"
+    "Search server URL"
    ]
   },
   {
@@ -383,18 +381,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Paths"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "BBS_DATA_PATH = os.getenv(\"BBS_DATA_PATH\", \"/raid/sync/proj115/bbs_data/\")\n",
-    "BBS_DATA_PATH = pathlib.Path(BBS_DATA_PATH)\n",
-    "trained_models_path = BBS_DATA_PATH / 'trained_models'"
+    "MySQL URL and engine"
    ]
   },
   {
@@ -404,9 +391,30 @@
    "outputs": [],
    "source": [
     "MYSQL_DB_URI = os.getenv(\"MYSQL_DB_URI\", \"dgx1.bbp.epfl.ch:8853\")\n",
-    "searcher = RemoteSearcher(SEARCH_ENGINE_URL)\n",
-    "engine = sqlalchemy.create_engine(f'mysql+pymysql://guest:guest@{MYSQL_DB_URI}/cord19_v47')\n",
-    "article_saver = ArticleSaver(connection=engine)"
+    "bbs_mysql_engine = sqlalchemy.create_engine(f'mysql+pymysql://guest:guest@{MYSQL_DB_URI}/cord19_v47')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Article saver"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "article_saver = ArticleSaver(connection=bbs_mysql_engine)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Search widget"
    ]
   },
   {
@@ -416,8 +424,8 @@
    "outputs": [],
    "source": [
     "search_widget = SearchWidget(\n",
-    "    searcher=searcher,\n",
-    "    connection=engine,\n",
+    "    bbs_search_url=SEARCH_ENGINE_URL,\n",
+    "    bbs_mysql_engine=bbs_mysql_engine,\n",
     "    article_saver=article_saver,\n",
     "    results_per_page=3)\n",
     "search_widget"
