[BBS-112] Widgets should print the CORD version (#128)
* Add information about the database version
* Add print in widgets

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -374,7 +374,8 @@
     "assert SEARCH_ENGINE_URL is not None\n",
     "\n",
     "response = requests.post(\"{}/help\".format(SEARCH_ENGINE_URL))\n",
-    "assert response.ok and response.json()['name'] == 'SearchServer', \"The server is not accessible\""
+    "assert response.ok and response.json()['name'] == 'SearchServer', \"The server is not accessible\"\n",
+    "print(f\"This server is using the database: {response.json()['database']}\")"
    ]
   },
   {
@@ -540,7 +541,8 @@
    "source": [
     "TEXT_MINING_URL = os.getenv(\"TEXT_MINING_URL\", \"http://dgx1.bbp.epfl.ch:8852\")\n",
     "response = requests.post(TEXT_MINING_URL + \"/help\")\n",
-    "assert response.ok and response.json()['name'] == 'MiningServer'"
+    "assert response.ok and response.json()['name'] == 'MiningServer'\n",
+    "print(f\"This server is using the database: {response.json()['database']}\")"
    ]
   },
   {
