Set the top n most frequent entities to build the graph from using curation app

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -772,9 +772,9 @@
    "outputs": [],
    "source": [
     "type_data = curated_table_extractions[[\"entity_type\"]].rename(columns={\"entity_type\": \"type\"})\n",
-    "\n",
+    "n_most_frequent = curation_app.n_most_frequent if curation_app.n_most_frequent else 100\n",
     "graphs, trees = generate_comention_analysis(\n",
-    "    curated_table_extractions, factor_counts, type_data=type_data, min_occurrences=5, n_most_frequent=100, factors=[\"paper\"], cores=10)"
+    "    curated_table_extractions, factor_counts, type_data=type_data, min_occurrences=5, n_most_frequent=n_most_frequent, factors=[\"paper\"], cores=10)"
    ]
   },
   {
