Fixed commented node positions

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -1693,7 +1693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1743,14 +1743,14 @@
     "        \"cytoscape\": paper_3000_cyto[0], \n",
     "        \"dict\": paper_3000_cyto[1],\n",
     "        \"paper_lookup\": paper_3000_cyto[2],\n",
-    "#         \"positioned\": True, # if the graph is positioned we will not generate a layout, but use the pre-computer one\n",
+    "        \"positioned\": True, # if the graph is positioned we will not generate a layout, but use the pre-computer one\n",
     "        \"networkx\": paper_graph\n",
     "    },\n",
     "    \"Naive pre-computed network (paragraph-based, 3000)\": {\n",
     "        \"cytoscape\": paragraph_3000_cyto[0], \n",
     "        \"dict\": paragraph_3000_cyto[1],\n",
     "        \"paper_lookup\": paragraph_3000_cyto[2],\n",
-    "#         \"positioned\": True, # if the graph is positioned we will not generate a layout, but use the pre-computer one\n",
+    "        \"positioned\": True, # if the graph is positioned we will not generate a layout, but use the pre-computer one\n",
     "        \"networkx\": paragraph_graph\n",
     "    }\n",
     "}   "
